Update Java Example