@@ -1,7 +1,6 @@
 plugins {
     java
-    kotlin("jvm")
-    kotlin("kapt")
+    kotlin("multiplatform")
 }
 
 group = "me.schlaubi.lavakord"
@@ -14,23 +13,50 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation(projects.kord)
-    implementation(projects.jdaJava)
-    implementation(projects.plugins.lavasrc)
-    implementation(projects.plugins.sponsorblock)
-    implementation(libs.sl4fj.simple)
-    implementation(libs.kord.core)
+kotlin {
+    jvmToolchain(19)
+    jvm {
+        withJava()
+    }
+    js(IR) {
+        nodejs()
+    }
 
-    implementation("org.apache.groovy:groovy-all:4.0.7")
-    implementation("org.jetbrains.kotlinx:atomicfu:0.20.2")
-    kapt("dev.kord.x:commands-processor:0.4.0-SNAPSHOT")
+    sourceSets {
+        commonMain {
+            dependencies {
+                implementation(libs.kord.core)
+                implementation(projects.kord)
+                implementation(projects.plugins.lavasrc)
+                implementation(projects.plugins.sponsorblock)
+            }
+        }
 
-    implementation("net.dv8tion:JDA:5.0.0-alpha.3") {
-        exclude(module = "opus-java")
+        named("jvmMain") {
+            dependencies {
+                implementation(projects.jdaJava)
+                implementation(libs.sl4fj.simple)
+                implementation(libs.kord.core)
+
+                implementation("org.apache.groovy:groovy-all:4.0.7")
+                implementation("org.jetbrains.kotlinx:atomicfu:0.20.2")
+
+                implementation("net.dv8tion:JDA:v5.0.0-beta.12") {
+                    exclude(module = "opus-java")
+                }
+            }
+        }
+
+        named("jsMain") {
+            dependencies {
+                implementation(libs.kotlinx.nodejs)
+            }
+        }
     }
 }
 
-kotlin {
-    jvmToolchain(19)
+tasks {
+    withType<JavaCompile> {
+        options.compilerArgs.add("--enable-preview")
+    }
 }
